Join, Login layout

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     //material
     implementation "com.google.android.material:material:$rootProject.materialVersion"
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayoutVersion"
+    implementation "com.google.android:flexbox:$rootProject.flexbox"
 
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:$rootProject.retrofitVersion"
