--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
         rxAndroidVersion = "2.1.1"
 
         //material
+        flexbox = "2.0.1"
         materialVersion='1.2.0-alpha06'
         constraintLayoutVersion ='2.0.0-beta6'
 
