--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
             android:name=".ui.login.JoinActivity"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".ui.login.LoginActivity" />
-        <activity android:name=".ui.main.MainActivity" />
+        <activity android:name=".ui.main.MainActivity"
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".ui.splash.SplashActivity"
             android:theme="@style/SplashTheme">
