--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.example.workto_android">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".MyApplication"
         android:allowBackup="false"
@@ -14,12 +15,14 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
+        <activity android:name=".ui.post.PostDetailActivity"></activity>
         <activity
             android:name=".ui.login.JoinActivity"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".ui.login.LoginActivity" />
-        <activity android:name=".ui.main.MainActivity"
-            android:windowSoftInputMode="adjustPan"/>
+        <activity
+            android:name=".ui.main.MainActivity"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ui.splash.SplashActivity"
             android:theme="@style/SplashTheme">
