--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".ui.post.PostDetailActivity"></activity>
+        <activity android:name=".ui.team.TeamActivity"></activity>
+        <activity android:name=".ui.post.PostDetailActivity" />
         <activity
             android:name=".ui.login.JoinActivity"
             android:windowSoftInputMode="adjustPan" />
